--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -46,8 +46,8 @@ jobs:
         password: ${{ secrets.SERVER_PASSWORD }}
         script: |
           echo "🛳️ Pulling latest Docker image..."
-          docker pull nocima/am-fastapi-app:latest
-          docker stop am-fastapi-app || true
-          docker rm am-fastapi-app || true
-          docker run -d -p 8081:8081 --name am-fastapi-app nocima/am-fastapi-app:latest
+          sudo docker pull nocima/am-fastapi-app:latest
+          sudo docker stop am-fastapi-app || true
+          sudo docker rm am-fastapi-app || true
+          sudo docker run -d -p 8081:8081 --name am-fastapi-app nocima/am-fastapi-app:latest
           echo "✅ Deployment complete!"
