--- a/MLFlow-Server/Dockerfile
+++ b/MLFlow-Server/Dockerfile
@@ -1,7 +1,7 @@
 # Utiliser une image Python officielle légère
 FROM python:3.11-slim
 
-# Mettre à jour et installer les dépendances de base
+# Installer les dépendances système
 RUN apt-get update && apt-get install -y \
     build-essential \
     git \
@@ -11,18 +11,19 @@ RUN apt-get update && apt-get install -y \
 # Définir le répertoire de travail
 WORKDIR /app
 
-# Installer MLflow
+# Installer MLflow et ses extras (SQLite, S3, etc.)
 RUN pip install --upgrade pip
-RUN pip install mlflow[extras]  # extras pour sqlite, postgres, s3 si besoin
+RUN pip install mlflow[extras]
 
-# Exposer le port du serveur MLflow
+# Exposer le port de MLflow
 EXPOSE 5000
 
-# Créer les dossiers pour stocker les artefacts et la base de données
-RUN mkdir -p /mlflow/artifacts /mlflow/db
+# Créer les dossiers pour la DB et les artefacts avec permissions
+RUN mkdir -p /mlflow/db /mlflow/artifacts \
+    && chmod -R 777 /mlflow
 
-# Définir les variables d'environnement pour MLflow
-ENV MLFLOW_TRACKING_URI sqlite:///mlflow/db/mlflow.db
+# Variables d'environnement pour MLflow
+ENV MLFLOW_TRACKING_URI sqlite:////mlflow/db/mlflow.db
 ENV MLFLOW_ARTIFACT_ROOT /mlflow/artifacts
 
 # Commande pour démarrer le serveur MLflow
@@ -31,4 +32,3 @@ CMD mlflow server \
     --default-artifact-root $MLFLOW_ARTIFACT_ROOT \
     --host 0.0.0.0 \
     --port 5000
-
