--- a/tp2/Dockerfile
+++ b/tp2/Dockerfile
@@ -16,4 +16,4 @@ RUN pip install fastapi uvicorn[standard] mlflow[extras] pandas scikit-learn pyd
 
 EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
