--- a/MLFlow-Server/Dockerfile.mlflow
+++ b/MLFlow-Server/Dockerfile.mlflow
@@ -15,7 +15,7 @@ RUN pip install --no-cache-dir mlflow[extras] boto3 scikit-learn
 WORKDIR /app
 
 # Variables d'environnement pour MLflow
-ENV MLFLOW_TRACKING_URI=sqlite:///app/mlflow.db
+ENV MLFLOW_TRACKING_URI=sqlite:////app/mlflow.db
 ENV MLFLOW_ARTIFACT_ROOT=s3://mlflow-artifacts
 
 # Lancer le serveur MLflow
